src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Incumbent__c</fullName>
        <label>Incumbent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>Amazon</fullName>
                </value>
                <value>
                    <fullName>Aptare</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>Autonomy</fullName>
                </value>
                <value>
                    <fullName>Avere</fullName>
                </value>
                <value>
                    <fullName>Capgemini</fullName>
                </value>
                <value>
                    <fullName>Citrix Systems</fullName>
                </value>
                <value>
                    <fullName>Cloudera</fullName>
                </value>
                <value>
                    <fullName>CSC</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>Deloitte</fullName>
                </value>
                <value>
                    <fullName>Exagrid</fullName>
                </value>
                <value>
                    <fullName>Hitachi</fullName>
                </value>
                <value>
                    <fullName>Horton Works</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>HP - Vertica</fullName>
                </value>
                <value>
                    <fullName>Huawei</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>IBM - DataStage</fullName>
                </value>
                <value>
                    <fullName>IBM - Global Services &amp; Other</fullName>
                </value>
                <value>
                    <fullName>IBM - Netezza</fullName>
                </value>
                <value>
                    <fullName>Iron Mountain</fullName>
                </value>
                <value>
                    <fullName>MapR</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Microsoft – Azure</fullName>
                </value>
                <value>
                    <fullName>Microsoft PDW / SQL Server</fullName>
                </value>
                <value>
                    <fullName>Microsoft – Windows Server</fullName>
                </value>
                <value>
                    <fullName>NetApp</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indirect_Partner__c</fullName>
        <inlineHelpText>Pivotal partner who will be taking the order.</inlineHelpText>
        <label>Indirect Partner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>AMDOCS</fullName>
                </value>
                <value>
                    <fullName>Atos</fullName>
                </value>
                <value>
                    <fullName>Capgemini</fullName>
                </value>
                <value>
                    <fullName>Cirrascale</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>ClickFox</fullName>
                </value>
                <value>
                    <fullName>Cognizant</fullName>
                </value>
                <value>
                    <fullName>CSC</fullName>
                </value>
                <value>
                    <fullName>EMCC</fullName>
                </value>
                <value>
                    <fullName>EMC Isilon</fullName>
                </value>
                <value>
                    <fullName>GE</fullName>
                </value>
                <value>
                    <fullName>Lockheed Martin</fullName>
                </value>
                <value>
                    <fullName>NTT</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Rackspace</fullName>
                </value>
                <value>
                    <fullName>RSA</fullName>
                </value>
                <value>
                    <fullName>SAS</fullName>
                </value>
                <value>
                    <fullName>SGI</fullName>
                </value>
                <value>
                    <fullName>TCS</fullName>
                </value>
                <value>
                    <fullName>Tech Mahindra</fullName>
                </value>
                <value>
                    <fullName>Unisys</fullName>
                </value>
                <value>
                    <fullName>Verizon/Terremark</fullName>
                </value>
                <value>
                    <fullName>Wipro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Influence_Partner__c</fullName>
        <inlineHelpText>Pivotal partner who influences but will not be taking the order.</inlineHelpText>
        <label>Influence Partner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>AMDOCS</fullName>
                </value>
                <value>
                    <fullName>Atos</fullName>
                </value>
                <value>
                    <fullName>Capgemini</fullName>
                </value>
                <value>
                    <fullName>Cirrascale</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>ClickFox</fullName>
                </value>
                <value>
                    <fullName>Cognizant</fullName>
                </value>
                <value>
                    <fullName>CSC</fullName>
                </value>
                <value>
                    <fullName>Deloitte</fullName>
                </value>
                <value>
                    <fullName>EMCC</fullName>
                </value>
                <value>
                    <fullName>EMC Isilon</fullName>
                </value>
                <value>
                    <fullName>Ericsson</fullName>
                </value>
                <value>
                    <fullName>Ernst and Young</fullName>
                </value>
                <value>
                    <fullName>GE</fullName>
                </value>
                <value>
                    <fullName>HCL</fullName>
                </value>
                <value>
                    <fullName>KPMG</fullName>
                </value>
                <value>
                    <fullName>Lockheed Martin</fullName>
                </value>
                <value>
                    <fullName>Nokia Siemens</fullName>
                </value>
                <value>
                    <fullName>NTT</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Predixion</fullName>
                </value>
                <value>
                    <fullName>Rackspace</fullName>
                </value>
                <value>
                    <fullName>Recombinant</fullName>
                </value>
                <value>
                    <fullName>RSA</fullName>
                </value>
                <value>
                    <fullName>SAS</fullName>
                </value>
                <value>
                    <fullName>SGI</fullName>
                </value>
                <value>
                    <fullName>Silver Spring Networks</fullName>
                </value>
                <value>
                    <fullName>Space Time Insight</fullName>
                </value>
                <value>
                    <fullName>Squid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Influencing_ISR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Influencing ISR</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>ISR</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Infra_Ops__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Infra &amp; Ops</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Innovative_AppDev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apps-Greenfield</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_ISR__c</fullName>
        <description>This is the opportunity owner's region - from their user record.  (A hidden field to find out of the Opp owner is an ISR rep - this field will be used in the approval process)</description>
        <formula>TEXT(Owner.Region__c)</formula>
        <label>Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_this_AppTx_Expansion_Opportunity__c</fullName>
        <label>Partner Uplift Eligible</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Justification_For_No_Custom_Services__c</fullName>
        <inlineHelpText>Select a reason for not attaching requisite services to this opportunity.</inlineHelpText>
        <label>Justification For No/Custom Services</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Services attached in seperate quote</fullName>
                </value>
                <value>
                    <fullName>Other, please explain</fullName>
                </value>
                <value>
                    <fullName>Custom Implementation &amp; Value Add Services</fullName>
                    <isActive>false</isActive>
                    <label>Custom Implementation &amp; Value Add Services</label>
                </value>
                <value>
                    <fullName>Custom Implementation Services</fullName>
                    <isActive>false</isActive>
                    <label>Custom Implementation Services</label>
                </value>
                <value>
                    <fullName>Custom Value Add Services</fullName>
                    <isActive>false</isActive>
                    <label>Custom Value Add Services</label>
                </value>
                <value>
                    <fullName>Customer opted out</fullName>
                    <isActive>false</isActive>
                    <label>Customer opted out</label>
                </value>
                <value>
                    <fullName>Labs engagement; PWS/PWSe use case</fullName>
                    <isActive>false</isActive>
                    <label>Labs engagement; PWS/PWSe use case</label>
                </value>
                <value>
                    <fullName>Labs engagement; no products purchased</fullName>
                    <isActive>false</isActive>
                    <label>Labs engagement; no products purchased</label>
                </value>
                <value>
                    <fullName>Partner prime for services</fullName>
                    <isActive>false</isActive>
                    <label>Partner prime for services</label>
                </value>
                <value>
                    <fullName>Product Pilot/POC purchase</fullName>
                    <isActive>false</isActive>
                    <label>Product Pilot/POC purchase</label>
                </value>
                <value>
                    <fullName>Product renewal</fullName>
                    <isActive>false</isActive>
                    <label>Product renewal</label>
                </value>
                <value>
                    <fullName>Product upsell/expansion</fullName>
                    <isActive>false</isActive>
                    <label>Product upsell/expansion</label>
                </value>
                <value>
                    <fullName>Services attached prior to product sale</fullName>
                    <isActive>false</isActive>
                    <label>Services attached prior to product sale</label>
                </value>
                <value>
                    <fullName>Services value perception issue</fullName>
                    <isActive>false</isActive>
                    <label>Services value perception issue</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Labs_Scoping_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Labs Scoping Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Labs_Scoping_Date__c</fullName>
        <label>Labs Scoping Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Meeting_Date_with_Exec_Sponsor__c</fullName>
        <label>Last Meeting Date with Exec Sponsor</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Influence_Partner__c</fullName>
        <description>While one single account can have many opportunities with different partners, each opportunity tends to be influenced primarily by a single partner.</description>
        <inlineHelpText>While one single account can have many opportunities with different partners, each opportunity tends to be influenced primarily by a single partner.</inlineHelpText>
        <label>Lead Influence Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>Apigee</fullName>
                </value>
                <value>
                    <fullName>ATOS</fullName>
                </value>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>Cap Gemini</fullName>
                </value>
                <value>
                    <fullName>CGI</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Cognizant</fullName>
                </value>
                <value>
                    <fullName>Dell EMC SAB (non VMWare)</fullName>
                </value>
                <value>
                    <fullName>DXC</fullName>
                </value>
                <value>
                    <fullName>Dynatrace</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>HCL</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>New Relic</fullName>
                </value>
                <value>
                    <fullName>Nutanix</fullName>
                </value>
                <value>
                    <fullName>Rackspace</fullName>
                </value>
                <value>
                    <fullName>Reply</fullName>
                </value>
                <value>
                    <fullName>Sopra Steria</fullName>
                </value>
                <value>
                    <fullName>TCS</fullName>
                </value>
                <value>
                    <fullName>Technoserv</fullName>
                </value>
                <value>
                    <fullName>Thoughtworks</fullName>
                </value>
                <value>
                    <fullName>T-Systems</fullName>
                </value>
                <value>
                    <fullName>Virtustream</fullName>
                </value>
                <value>
                    <fullName>VMWare</fullName>
                </value>
                <value>
                    <fullName>Wipro Digital</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_ID_EMC__c</fullName>
        <label>Legacy ID EMC</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID_Pivotal_Labs__c</fullName>
        <label>Legacy ID Pivotal Labs</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID_SPRING__c</fullName>
        <label>Legacy ID SPRING</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID_VMWARE__c</fullName>
        <label>Legacy ID VMWARE</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID_XtremeLab__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID XtremeLab</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Info_ExtremeLab__c</fullName>
        <label>Legacy Info ExtremeLab</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Organization__c</fullName>
        <label>Legacy Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMC</fullName>
                </value>
                <value>
                    <fullName>VMware</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Status1__c</fullName>
        <label>Legal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Legal not engaged</fullName>
                    <default>true</default>
                    <label>Legal not engaged</label>
                </value>
                <value>
                    <fullName>Customer Legal Engaged</fullName>
                </value>
                <value>
                    <fullName>Pivotal Legal Engaged</fullName>
                </value>
                <value>
                    <fullName>Legal terms in place</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Status_Notes__c</fullName>
        <label>Legal Status Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_Influence__c</fullName>
        <description>This field will provide more granular insight into degree of partner influence.</description>
        <inlineHelpText>This field will provide more granular insight into degree of partner influence.</inlineHelpText>
        <label>Level of Influence</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_Influence_Partner__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Simple Account Planning / Core Order Processor Only</fullName>
                </value>
                <value>
                    <fullName>Introduction to Qualified Stakeholder</fullName>
                </value>
                <value>
                    <fullName>Referral of Qualified Opportunity</fullName>
                </value>
                <value>
                    <fullName>Referral of a Committed Opportunity</fullName>
                </value>
                <value>
                    <fullName>Complete/Joint Sales Campaign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Linked_All_Services_Opportunity_Total__c</fullName>
        <label>Linked All Services Opportunity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Linked_AppTX_Scoping_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Linked AppTX Scoping Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Linked_AppTX_Services_Opportunity_Total__c</fullName>
        <label>Linked AppTX Services Opportunity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Linked_AppTx_SOW_Delivered_to_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Linked AppTx SOW Delivered to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Linked_Data_Scoping_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Linked Data Scoping Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Linked_Labs_Scoping_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Linked Labs Scoping Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Linked_Labs_Scoping_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Linked Labs Scoping Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Linked_Labs_Services_Opportunity_Total__c</fullName>
        <label>Linked Labs Services Opportunity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Linked_PCFS_SOW_Delivered_to_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Linked PCFS SOW Delivered to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Linked_PCFS_Scoping_Scheduled_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Linked PCFS Scoping Scheduled Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Linked_PCF_Services_Opportunity_Total__c</fullName>
        <label>Linked PCF Services Opportunity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Linked_Service_Opportunity_Total__c</fullName>
        <label>Linked Service Opportunity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Linked_Subscription_Opportunity_Total__c</fullName>
        <label>Linked Subscription Opportunity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Master_Opportunity_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the opportunity your Services opportunity should be attached to.</inlineHelpText>
        <label>Master Subscription Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Linked Services Opportunities</relationshipLabel>
        <relationshipName>Services_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mutual_Action_Plan_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mutual Action Plan Uploaded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mutual_Action_Plan__c</fullName>
        <inlineHelpText>Please enter the Google Doc URL for your Mutual Action Plan</inlineHelpText>
        <label>Mutual Action Plan</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Named_Account__c</fullName>
        <formula>TEXT(Account.Named_Account__c)</formula>
        <label>Named Account?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Action_involving_CSO_org_PA_CNS__c</fullName>
        <inlineHelpText>PA, Field CTO or CNS rep. Enter information in this format:  Initials, Scheduled date of next action, brief description.

DO NOT delete previous entries as we want to see a stream of Next Actions in this field.</inlineHelpText>
        <label>Next Action Involving BAT Team</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Steps_Last_Update__c</fullName>
        <label>Next Steps Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Services_Justification_Text__c</fullName>
        <inlineHelpText>If "Other" is the reason for no packaged services attached, please explain.</inlineHelpText>
        <label>No Services Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Deal_Info__c</fullName>
        <label>Non-Standard Deal Info</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Deal_Text__c</fullName>
        <formula>IF(Non_Standard_Deal__c, "Yes", "No")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Standard Deal Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Non-Standard is defined as any feature outside of the applicable product guide, or any term outside of an existing customer contract or Pivotal's EULA.</inlineHelpText>
        <label>Non-Standard Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Weeks__c</fullName>
        <label>Number Weeks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offerings_Proposed__c</fullName>
        <description>To indicate the services/products pitched in proposals created by the Sales Productivity team. Only visible to the Business Operations profile.</description>
        <label>Offerings Proposed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agile Transformation</fullName>
                </value>
                <value>
                    <fullName>Application Development</fullName>
                </value>
                <value>
                    <fullName>BDS CSO</fullName>
                </value>
                <value>
                    <fullName>Big Data Suite</fullName>
                </value>
                <value>
                    <fullName>Data Science</fullName>
                </value>
                <value>
                    <fullName>Discovery &amp; Framing</fullName>
                </value>
                <value>
                    <fullName>Innovation Workshop</fullName>
                </value>
                <value>
                    <fullName>PCF CSO</fullName>
                </value>
                <value>
                    <fullName>PCF Mobile Services</fullName>
                </value>
                <value>
                    <fullName>Pivotal Cloud Foundry/PWS</fullName>
                </value>
                <value>
                    <fullName>Pivotal Education</fullName>
                </value>
                <value>
                    <fullName>Pivotal Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opp_Age__c</fullName>
        <formula>IF(IsClosed,( 
CloseDate - DATEVALUE(CreatedDate)), 
TODAY() - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Owner_s_Manager_s_Email__c</fullName>
        <description>populated by workflow rule</description>
        <label>Opp Owner's Manager's Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity_Channel__c</fullName>
        <inlineHelpText>Please select the channel partner route the Opportunity is taking. If the deal is being processed by EMC/VMW/Pivotal and a partner is involved, you would then select Yes and populate either the distributor or reseller field, where applicable.</inlineHelpText>
        <label>Channel Partner?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Distributor_TEXT__c</fullName>
        <formula>Opportunity_Distributor_acct__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Distributor TEXT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If the Opportunity is taking a channel partner route through a distributor, please type in that distributor's name and click the magnify glass to select the correct name.</inlineHelpText>
        <label>Opportunity Distributor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Account of Partner must be Type: Partner and Partner Type: Distributor</errorMessage>
            <filterItems>
                <field>Partnership__c.Account__r.Type</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <filterItems>
                <field>Partnership__c.Account__r.Partner_Type__c</field>
                <operation>equals</operation>
                <value>Distributor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Partnership__c</referenceTo>
        <relationshipLabel>Opportunities (Distributor)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Distributor_acct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If the Opportunity is taking a channel partner route through a distributor, please type in that distributor's name and click the magnify glass to select the correct name.</inlineHelpText>
        <label>Opportunity Distributor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <filterItems>
                <field>Account.Partner_Type__c</field>
                <operation>equals</operation>
                <value>Distributor</value>
            </filterItems>
            <infoMessage>Account must be Type: Partner and Partner Type: Distributor</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Opportunity Distributor)</relationshipLabel>
        <relationshipName>Distributor_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <displayFormat>OP-{0000000}</displayFormat>
        <label>Opportunity Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity_Push_Count__c</fullName>
        <description>Tracker #167308570</description>
        <inlineHelpText>How many times has the close date been moved?</inlineHelpText>
        <label>Opportunity Push Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Reseller_TEXT__c</fullName>
        <formula>Opportunity_Reseller_acct__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Reseller TEXT</label>
        <type>Text</type>
    </fields>
</CustomObject>